Bug 564227 - [15][compiler][env] JEP 360 Sealed Types - Addition to compiler.env
Change-Id: If5b9dbd3d164e1998e2ade12d81447e9cf21a506
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>